--- a/src/images.html
+++ b/src/images.html
@@ -9,8 +9,69 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <a href="./index.html" class="logo">Boilerplate</a>
+            <button class="menu-toggle" aria-label="Meny">☰</button>
+            <nav class="nav">
+                <a href="./index.html">Start</a>
+                <a href="./images.html" class="active">Bilder</a>
+                <a href="./process.html">Arbetsprocess</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero container">
+            <h1>Bilder</h1>
+            <p>Här visas fem stycken bilder i ett galleri.</p>
+        </section>
+
+        <section class="container">
+            <div class="image-grid">
+                <picture>
+                    <source srcset="./images/img1.avif" type="image/avif">
+                    <source srcset="./images/img1.webp" type="image/webp">
+                    <img src="./images/img1.jpg" alt="Bild 1" loading="lazy">
+                </picture>
+
+                <picture>
+                    <source srcset="./images/img2.avif" type="image/avif">
+                    <source srcset="./images/img2.webp" type="image/webp">
+                    <img src="./images/img2.jpg" alt="Bild 2" loading="lazy">
+                </picture>
+
+                <picture>
+                    <source srcset="./images/img3.avif" type="image/avif">
+                    <source srcset="./images/img3.webp" type="image/webp">
+                    <img src="./images/img3.jpg" alt="Bild 3" loading="lazy">
+                </picture>
+
+                <picture>
+                    <source srcset="./images/img4.avif" type="image/avif">
+                    <source srcset="./images/img4.webp" type="image/webp">
+                    <img src="./images/img4.jpg" alt="Bild 4" loading="lazy">
+                </picture>
+
+                <picture>
+                    <source srcset="./images/img5.avif" type="image/avif">
+                    <source srcset="./images/img5.webp" type="image/webp">
+                    <img src="./images/img5.jpg" alt="Bild 5" loading="lazy">
+                </picture>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <small>&copy; <span id="year"></span> Boilerplate</small>
+        </div>
+    </footer>
 
     <script src="./js/script.js"></script>
 </body>
+
+</html>
 
 </html>
