feat(favicon): add convert-favicon.js; generate PNG & ICO from SVG; include favicon links in all HTML pages

--- a/src/images.html
+++ b/src/images.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boilerplate - Images</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="./images/favicon.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
 </head>
 
 <body>
