--- a/src/images.html
+++ b/src/images.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,5 @@
 
     <script src="./js/script.js"></script>
 </body>
-
-</html>
 
 </html>
