--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="sv">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Boilerplate – Start</title>
+    <title>Boilerplate - Start</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <link rel="icon" href="./images/favicon.png" sizes="32x32" type="image/png">
